--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100vh;
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -20,30 +20,26 @@
       height: 95vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      overflow: hidden; /* Ensure nothing overflows */
     }
 
     .map-container {
       position: relative;
       width: 100%;
-      aspect-ratio: 1024 / 665;
-      max-height: 85vh;
-    }
-
-    .map-container img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .map-container svg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
       height: 100%;
-      pointer-events: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .map-container img,
+    .map-container svg {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
     }
 
     svg polygon {
