--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
   <script>
     let selectedArea = null;
+    let previousSelected = null;  // Keep track of previously selected area
+
     const polygons = document.querySelectorAll('polygon');
 
     // Function to handle mouseover
@@ -89,7 +91,6 @@
         }
       });
 
-    
       // Reset color when mouse leaves
       polygon.addEventListener('mouseout', () => {
         if (!polygon.classList.contains('selected')) {
@@ -98,12 +99,20 @@
       });
 
       polygon.addEventListener('click', () => {
-        // Deselect previously selected areas
+        // Deselect previously selected areas and reset their color
+        if (previousSelected) {
+          previousSelected.style.fill = "transparent"; // Reset the color of the previous selected area
+        }
+
         polygons.forEach(p => p.classList.remove('selected'));
+
         // Add selected class and set the new area
         polygon.classList.add('selected');
         polygon.style.fill = "rgba(0, 0, 255, 0.4)"; // Set color for selected area
         selectedArea = polygon.getAttribute('data-name');
+
+        // Update the previously selected area
+        previousSelected = polygon;
       });
     });
 
